@@ -107,6 +107,13 @@ Run the netperf-wrapper GUI. All other options are used as defaults in the GUI,
 but can be changed once it is running. See section below for a description of
 the GUI.
 .TP
+\fB--new-gui-instance\fR
+Start a new GUI instance. Otherwise, netperf-wrapper will try to connect to an
+already running GUI instance and have that load any new data files specified as
+arguments. Implies --gui. Note that when multiple GUI instances are running,
+there is no guarantee as to which instance will get a subsequent open request
+(if run again without --new-gui-instance).
+.TP
 \fBTest configuration:\fR
 .PP
 These options affect the behaviour of the test being run and have no
